Change about paragraph.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="intro-text">
                         <span class="name">John McCann</span>
                         <hr class="star-light">
-                        <span class="skills">Computer Programmer - Web Developer - Former Nomad</span>
+                        <span class="skills">Software Engineer</span>
                     </div>
                 </div>
             </div>
@@ -116,27 +116,34 @@
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>
                         Hello, I'm John, and I'm a recent grad who's really
-                        passionate about computers :) I first got into this
+                        passionate about computers.  I first got into this
                         stuff as a teenager building digital logic circuits.
                         Later, I went on to study computer engineering at UIUC.
                         In college, I spent my first two summers working in
                         various research groups. I then gravitated towards
                         lower level software, and spent my last summer at
-                        VMware. For my last semester in college, I was fortunate
-                        enough to study
+                        VMware. For my last semester in college, I was
+                        fortunate enough to study abroad in Taiwan. After
+                        graduation, I lived in China for awhile, and spent some 
                     </p>
                 </div>
                 <div class="col-lg-4">
+                        <p>time traveling around Asia and Europe.</p>  
+                        
                     <p>
-                        in Taiwan. After graduation, I lived in China for
-                        awhile, and spent some time traveling around Asia and
-                        Europe. Since college, I've gotten really into web
-                        development. While I've spent more time designing and
-                        building things for the front-end, I'm also interested
-                        in the back-end aspects of systems. Besides programming
-                        and traveling, I'm also into learning Chinese and
-                        soccer. At the moment, this site is still under
-                        development.
+                        Since
+                        graduation, I've gotten really into web development.
+                        While I've spent more time designing and building
+                        things for the front-end, I'm also interested in the
+                        back-end aspects of systems. What really excites me is
+                        the opportunity to create something that has an impact
+                        and will be appealing to users. While you're here, take
+                        a second to look at some of the projects I've worked
+                        on :)
+                    </p>
+                    <p>
+                        And besides programming and traveling, I'm also into learning Chinese and
+                        soccer. 
                     </p>
                 </div>
             </div>
@@ -347,7 +354,7 @@
                                 combinations. 
                             </p>
                             <p>
-                                I wanted Storyphotos to have a unique look and
+                                I wanted Story Photos to have a unique look and
                                 feel, so I wrote the html and
                                 css from scratch. For the automated scrolling, I
                                 used Álvaro Trigo's awesome
