Add video for Segfault OS.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="intro-text">
                         <span class="name">John McCann</span>
                         <hr class="star-light">
-                        <span class="skills">Software Engineer</span>
+                        <span class="skills">Software Engineer - Former Nomad</span>
                     </div>
                 </div>
             </div>
@@ -496,7 +496,7 @@
                             
                             <video  controls id="segfault-os"
                             class="img-responsive img-centered portfolio-media">
-                                <source src="bear.mp4" type="video/mp4">
+                                <source src="videos/segfault_os.mp4" type="video/mp4">
                             </video>
                             <!-- <a href="http://www.storyphotos.net" class="project-link"> -->
                                 <!-- [> <div class="portfolio-overlay navy"> <] -->
