update social media links

--- a/index.html
+++ b/index.html
@@ -277,16 +277,16 @@
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw XXX"></i></a>
                             </li> -->
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://github.com/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-github fa-lg"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://www.linkedin.com/in/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/IAmJohnMcCann" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://www.facebook.com/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw XXX"></i></a>
