--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Font-Awesome -->
+    <script src="https://use.fontawesome.com/9f4e3bf3b8.js"></script>
+
     <!-- Theme CSS -->
     <!-- <link href="css/freelancer.min.css" rel="stylesheet"> -->
     <link href="css/freelancer.css" rel="stylesheet">
@@ -23,7 +26,6 @@
     <link href="css/added.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
