--- a/index.html
+++ b/index.html
@@ -279,7 +279,11 @@
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw XXX"></i></a>
                             </li> -->
                             <li>
-                                <a href="https://github.com/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/johnfrancismccann" class="btn-social btn-outline">
+                                    <i class="fa fa-fw">
+                                    &#xf09b
+                                    </i>
+                                </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
