use svg imgs for social media links instead of font-awesome.

--- a/index.html
+++ b/index.html
@@ -274,25 +274,60 @@
                 <div class="row">
                     <div class="footer-col col-md-12">
                         <h3>Around the Web</h3>
-                        <ul class="list-inline">
+                        <ul class="list-inline" id="around-web">
                             <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw XXX"></i></a>
                             </li> -->
                             <li>
+                                <!-- <a href="https://github.com/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a> -->
                                 <a href="https://github.com/johnfrancismccann" class="btn-social btn-outline">
-                                    <i class="fa fa-fw">
-                                    &#xf09b
-                                    </i>
+<!-- <svg height="1024" width="1024" xmlns="http://www.w3.org/2000/svg"> -->
+<svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
+  <path d="M512 0C229.25 0 0 229.25 0 512c0 226.25 146.688 418.125 350.156 485.812 25.594 4.688 34.938-11.125 34.938-24.625 0-12.188-0.469-52.562-0.719-95.312C242 908.812 211.906 817.5 211.906 817.5c-23.312-59.125-56.844-74.875-56.844-74.875-46.531-31.75 3.53-31.125 3.53-31.125 51.406 3.562 78.47 52.75 78.47 52.75 45.688 78.25 119.875 55.625 149 42.5 4.654-33 17.904-55.625 32.5-68.375C304.906 725.438 185.344 681.5 185.344 485.312c0-55.938 19.969-101.562 52.656-137.406-5.219-13-22.844-65.094 5.062-135.562 0 0 42.938-13.75 140.812 52.5 40.812-11.406 84.594-17.031 128.125-17.219 43.5 0.188 87.312 5.875 128.188 17.281 97.688-66.312 140.688-52.5 140.688-52.5 28 70.531 10.375 122.562 5.125 135.5 32.812 35.844 52.625 81.469 52.625 137.406 0 196.688-119.75 240-233.812 252.688 18.438 15.875 34.75 47 34.75 94.75 0 68.438-0.688 123.625-0.688 140.5 0 13.625 9.312 29.562 35.25 24.562C877.438 930 1024 738.125 1024 512 1024 229.25 794.75 0 512 0z" />
+</svg>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <!-- <a href="https://www.linkedin.com/in/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a> -->
+                                <a href="https://www.linkedin.com/in/johnfrancismccann" class="btn-social btn-outline" id="linkedin">
+<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 430.117 430.117" style="enable-background:new 0 0 430.117 430.117;"
+	 xml:space="preserve">
+<g>
+	<path id="LinkedIn" d="M430.117,261.543V420.56h-92.188V272.193c0-37.271-13.334-62.707-46.703-62.707
+		c-25.473,0-40.632,17.142-47.301,33.724c-2.432,5.928-3.058,14.179-3.058,22.477V420.56h-92.219c0,0,1.242-251.285,0-277.32h92.21
+		v39.309c-0.187,0.294-0.43,0.611-0.606,0.896h0.606v-0.896c12.251-18.869,34.13-45.824,83.102-45.824
+		C384.633,136.724,430.117,176.361,430.117,261.543z M52.183,9.558C20.635,9.558,0,30.251,0,57.463
+		c0,26.619,20.038,47.94,50.959,47.94h0.616c32.159,0,52.159-21.317,52.159-47.94C103.128,30.251,83.734,9.558,52.183,9.558z
+		 M5.477,420.56h92.184v-277.32H5.477V420.56z"/>
+</g>
+</svg>
+                                </a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/IAmJohnMcCann" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <!-- <a href="https://twitter.com/IAmJohnMcCann" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a> -->
+                                <a href="https://twitter.com/IAmJohnMcCann" class="btn-social btn-outline">
+<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300.00006 244.18703" height="244.19" width="300" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+ <g style="" transform="translate(-539.18 -568.86)">
+  <path d="m633.9 812.04c112.46 0 173.96-93.168 173.96-173.96 0-2.6463-0.0539-5.2806-0.1726-7.903 11.938-8.6302 22.314-19.4 30.498-31.66-10.955 4.8694-22.744 8.1474-35.111 9.6255 12.623-7.5693 22.314-19.543 26.886-33.817-11.813 7.0031-24.895 12.093-38.824 14.841-11.157-11.884-27.041-19.317-44.629-19.317-33.764 0-61.144 27.381-61.144 61.132 0 4.7978 0.5364 9.4646 1.5854 13.941-50.815-2.5569-95.874-26.886-126.03-63.88-5.2508 9.0354-8.2785 19.531-8.2785 30.73 0 21.212 10.794 39.938 27.208 50.893-10.031-0.30992-19.454-3.0635-27.69-7.6468-0.009 0.25652-0.009 0.50661-0.009 0.78077 0 29.61 21.075 54.332 49.051 59.934-5.1376 1.4006-10.543 2.1516-16.122 2.1516-3.9336 0-7.766-0.38716-11.491-1.1026 7.7838 24.293 30.355 41.971 57.115 42.465-20.926 16.402-47.287 26.171-75.937 26.171-4.929 0-9.7983-0.28036-14.584-0.84634 27.059 17.344 59.189 27.464 93.722 27.464" fill="#1da1f2"/>
+ </g>
+</svg>
+                                </a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <!-- <a href="https://www.facebook.com/johnfrancismccann" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a> -->
+                                <a href="https://www.facebook.com/johnfrancismccann" class="btn-social btn-outline">
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 310 310" style="enable-background:new 0 0 310 310;" xml:space="preserve">
+<g id="XMLID_834_">
+	<path id="XMLID_835_" d="M81.703,165.106h33.981V305c0,2.762,2.238,5,5,5h57.616c2.762,0,5-2.238,5-5V165.765h39.064
+		c2.54,0,4.677-1.906,4.967-4.429l5.933-51.502c0.163-1.417-0.286-2.836-1.234-3.899c-0.949-1.064-2.307-1.673-3.732-1.673h-44.996
+		V71.978c0-9.732,5.24-14.667,15.576-14.667c1.473,0,29.42,0,29.42,0c2.762,0,5-2.239,5-5V5.037c0-2.762-2.238-5-5-5h-40.545
+		C187.467,0.023,186.832,0,185.896,0c-7.035,0-31.488,1.381-50.804,19.151c-21.402,19.692-18.427,43.27-17.716,47.358v37.752H81.703
+		c-2.762,0-5,2.238-5,5v50.844C76.703,162.867,78.941,165.106,81.703,165.106z"/>
+</g>
+</svg>
+                                </a>
                             </li>
                             <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw XXX"></i></a>
