minor change to Story Photos description

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                 to share short stories and photographs from my
                                 travels. The website is fully responsive and
                                 maintains a smooth user experience across a
-                                wide range of OS, browser, and device
+                                wide range of browser, device, and OS
                                 combinations. 
                             </p>
                             <p>
