update hash for project modals.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="#story-photos" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-overlay navy">
                             <img src="img/portfolio/storyphotos_square.jpeg" alt="" class="portfolio-image">
                         </div>
@@ -162,7 +162,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#segfault-os" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-overlay orange-red">
                             <img src="img/portfolio/segfault_os.jpeg" alt="" class="portfolio-image">
                         </div>
@@ -175,7 +175,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#notify" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-overlay navy">
                             <img src="img/portfolio/notify_square.jpeg" alt="" class="portfolio-image">
                         </div>
@@ -324,7 +324,7 @@
     </div>
 
     <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="story-photos" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -387,7 +387,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="notify" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -438,7 +438,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="segfault-os" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content video-pauser" data-video-target="segfault-os">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
