Change id of Segfault video tag so that it's unique. Fixes problem with video not pausing when modal is closed.

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         </div>
     </div>
     <div class="portfolio-modal modal fade" id="segfault-os" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content video-pauser" data-video-target="segfault-os">
+        <div class="modal-content video-pauser" data-video-target="segfault-os-video">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
@@ -455,7 +455,7 @@
                                 </a>
                             </h2>
                             <hr class="star-primary">
-                            <video  controls id="segfault-os"
+                            <video  controls id="segfault-os-video"
                             class="img-responsive img-centered portfolio-media">
                                 <source src="videos/segfault_os.mp4" type="video/mp4">
                             </video>
