Update color scheme to green and blue

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 <body id="page-top" class="index">
 
     <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom green">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">John McCann</a>
+                <a class="navbar-brand navy-font" href="#page-top">John McCann</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -83,7 +83,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="orange-red">
+    <header class="navy">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -92,7 +92,7 @@
                     <div class="intro-text">
                         <span class="name">John McCann</span>
                         <hr class="star-light">
-                        <span class="skills">Software Engineer - Former Nomad</span>
+                        <span class="skills">Software Engineer</span>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
     </header>
 
     <!-- About Section -->
-    <section class="success navy" id="about">
+    <section class="success green" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -109,41 +109,19 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-2">
                     <p>
-                        Hello, I'm John, and I'm a recent grad who's really
-                        passionate about computers.  I first got into this
-                        stuff as a teenager building digital logic circuits.
-                        Later, I went on to study computer engineering at UIUC.
-                        In college, I spent my first two summers working in
-                        various research groups. I then gravitated towards
-                        lower level software, and spent my last summer at
-                        VMware. For my last semester in college, I was
-                        fortunate enough to study abroad in Taiwan. After
-                        graduation, I lived in China for a while, and spent some 
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                        <p>time traveling around Asia and Europe.</p>  
-                        
-                    <p>
-                        Since
-                        graduation, I've gotten really into web development.
-                        While I've spent more time designing and building
-                        things for the front-end, I'm also interested in the
-                        back-end aspects of systems. What really excites me is
-                        the opportunity to create something that has an impact
-                        and will be appealing to users. While you're here, take
-                        a second to look at some of the projects I've worked
-                        on :)
-                    </p>
-                    <p>
-                        And besides programming and traveling, I'm also into learning Chinese and
-                        soccer. 
+                        Hello!!! I’m John, and I’m a software engineer based in
+                        San Francisco. Over the last year at Grand Rounds, I’ve
+                        worked on feature development as a software engineer
+                        and led releases as a QA engineer. I’m interested in
+                        things like fullstack development, QA, project
+                        management, and enabling teams to work more
+                        efficiently. I’m currently exploring opportunities, so
+                        please feel free to reach out by sending an email!
                     </p>
                 </div>
             </div>
-
         </div>
     </section>
 
@@ -172,10 +150,10 @@
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#segfault-os" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-overlay orange-red">
+                        <div class="portfolio-overlay green">
                             <img src="img/portfolio/segfault_os.jpeg" alt="" class="portfolio-image">
                         </div>
-                        <div class="caption orange-red">
+                        <div class="caption green">
                             <div class="caption-content">
                                 <span>Segfault OS</span>
                             </div>
@@ -257,7 +235,7 @@
 
     <!-- Footer -->
     <footer class="text-center">
-        <div class="footer-above">
+        <div class="footer-above navy">
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-12">
@@ -314,7 +292,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer-below">
+        <div class="footer-below green">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
