--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <p>
                         Hello!!! I’m John, and I’m a software engineer based in
-                        San Francisco. Over the last year at Grand Rounds, I’ve
-                        worked on feature development as a software engineer
-                        and led releases as a QA engineer. I’m interested in
-                        things like fullstack development, QA, project
-                        management, and enabling teams to work more
-                        efficiently. I’m currently exploring opportunities, so
-                        please feel free to reach out by sending an email!
+                        San Francisco. Over my last incredible year at <a
+                        class="navy-font"
+                        href="https://grandrounds.com/">Grand Rounds</a>, I’ve
+                        worked on feature development as a
+                        software engineer and led releases as a QA engineer.
+                        I’m mulitfaceted and interested in things like
+                        fullstack development, QA, project management, and
+                        enabling teams to work more efficiently.
                     </p>
                 </div>
             </div>
@@ -188,46 +189,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-10 col-lg-offset-1">
                     <p id="contactMessage">
-                        If you'd like to get in touch or just want to say
-                        hello, please feel free to reach out. You can email me
-                        directly at <a class="orange-red-font"
-                        href="mailto:hello@johnmccann.io">hello@johnmccann.io</a>
-                        or use the form below.
+                        I’m currently exploring opportunities, so please feel
+                        free to reach out by sending an
+                        <a class="green-font"
+                        href="mailto:hello@johnmccann.dev">email</a>!
                     </p>
-                    <form name="sentMessage" id="contactForm" action="https://formspree.io/hello@johnmccann.io" method="POST">
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required name="name" data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required name="_replyto" data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required name="message" data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-lg">
-                                    Send
-                                </button>
-                            </div>
-                        </div>
-                    </form>
                 </div>
             </div>
         </div>
@@ -235,7 +203,7 @@
 
     <!-- Footer -->
     <footer class="text-center">
-        <div class="footer-above navy">
+        <div class="footer-above">
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-12">
@@ -292,7 +260,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer-below green">
+        <div class="footer-below">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
