Update grammer errors in About section

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <p>
                         Hello!!! I’m John, and I’m a software engineer based in
-                        San Francisco. Over my last incredible year at <a
+                        San Francisco. Over the last incredible year at <a
                         class="navy-font"
                         href="https://grandrounds.com/">Grand Rounds</a>, I’ve
                         worked on feature development as a
                         software engineer and led releases as a QA engineer.
-                        I’m mulitfaceted and interested in things like
+                        I’m mulitfaceted and am interested in things like
                         fullstack development, QA, project management, and
                         enabling teams to work more efficiently.
                     </p>
