Update Contact section text

--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
                     <p id="contactMessage">
-                        I’m currently exploring opportunities, so please feel
-                        free to reach out by sending an
+                        Please feel free to reach out by sending an
                         <a class="green-font"
                         href="mailto:hello@johnmccann.dev">email</a>!
                     </p>
